# cloudfront-logs

./: .gitignore  .markdownlint.jsonc  BENCHMARK.md  Cargo.toml  README.md  benches.sh  docs.sh
.cargo/: config.toml
.github/workflows/: audit.yaml  ci.yaml
benches/: borrowed-real-world-unvalidated.rs  borrowed-real-world-validated.rs  borrowed.rs  comparison-real-world.rs  comparison-single-field.rs  comparison-two-fields.rs  owned.rs  utilities.rs
src/: consts.rs  lib.rs  shared.rs  tests.rs
src/borrowed/: mod.rs  parquet.rs  raw.rs  simple.rs
src/borrowed/typed/: chrono.rs  time.rs
src/owned/: mod.rs  parquet.rs  simple.rs
src/parquet/: mod.rs
src/raw/: mod.rs
src/raw/line/: checked.rs  mod.rs  unsafe_.rs
src/raw/view/: checked.rs  mod.rs  smart.rs  unsafe_.rs
src/referential/: mod.rs  parquet.rs  raw.rs  simple.rs
src/referential/typed/: chrono.rs  mod.rs  time.rs
src/simple/: mod.rs
src/typed/: mod.rs
src/types/: mod.rs
