[package]
name = "cloudfront-logs"
description = "AWS CloudFront log line parser"
version = "0.2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/asaaki/cloudfront-logs"
repository = "https://github.com/asaaki/cloudfront-logs"
categories = [
  "parser-implementations",
  "data-structures",
  "encoding",
  "rust-patterns",
  "value-formatting",
]
keywords = ["cloudfront", "log", "parser", "aws", "tsv"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "borrowed"
harness = false

[[bench]]
name = "owned"
harness = false

[[bench]]
name = "real-world"
path = "benches/comparison-real-world.rs"
harness = false

[[bench]]
name = "single-field"
path = "benches/comparison-single-field.rs"
harness = false

[[bench]]
name = "two-fields"
path = "benches/comparison-two-fields.rs"
harness = false

[features]
default = ["alloc", "typed"]

# when you need owned versions of the structured log data; enabled by default
alloc = []

# provides a more typed version of the structured log data (not just core/std primitives); enabled by default
typed = ["alloc", "dep:time"]

[dependencies]
memchr = "2.7.2"
time = { version = "0.3.35", features = ["parsing", "macros"], optional = true }

[dev-dependencies]
divan = "0.1.14"

[lints.clippy]
# transformed from https://github.com/EmbarkStudios/rust-ecosystem/blob/main/lints.rs
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatched_target_os = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

# currently not enforced
# doc_markdown = "warn" -- false positives for term CloudFront
# map_err_ignore = "warn" -- no custom error types, only strings

[lints.rust]
# transformed from https://github.com/EmbarkStudios/rust-ecosystem/blob/main/lints.rs
unsafe_code = "forbid"
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
